Updates from Overleaf

--- a/RTG.tex
+++ b/RTG.tex
@@ -288,7 +288,7 @@ Chicago strives to accelerate  technology and innovation in the city and beyond,
 The proposed Research Training Group (RTG) will grow a sophisticated and diverse talent pool for Chicago and the nation. 
 
 % Sonja making somewhat big edits here; hope you agree it's a better summary!! 
-Rooted in theoretical mathematical and statistical foundations, our focus is on strengthening our interdisciplinary curriculum to train the next generation of applied mathematicians to creatively integrate tools from various areas to solve complex problems in technology, environment, finance, social and biomedical sciences. This RTG will establish  a reproducible and sustainable process for developing this needed maturity in mathematics graduate and undergraduate students and postdoctoral fellows. We will accomplish this with the following plan:  we will restructure student-centered research activities in the department (Section~\ref{section:regular research activities}), offer new and connect to existing summer activities in-house and with our partners (Section~\ref{sec:summer}), and institutionalize existing and develop new interdisciplinary co-curricular training activities (Section~\ref{section: co-curricular}). 
+Rooted in theoretical mathematical and statistical foundations, our focus is on strengthening our interdisciplinary academic program to train the next generation of applied mathematicians.  They will learn to creatively integrate tools from various areas to solve complex problems in technology, environment, finance, social and biomedical sciences. This RTG will establish  a reproducible and sustainable process for developing this needed maturity in mathematics graduate and undergraduate students and postdoctoral fellows. We will accomplish this with the following plan:  we will restructure student-centered research activities in the department (Section~\ref{section:regular research activities}), offer new opportunities and connect to existing summer activities in-house and with our partners (Section~\ref{sec:summer}), and institutionalize existing and develop new interdisciplinary co-curricular training activities (Section~\ref{section: co-curricular}). 
 
 \begin{comment} 
 While standard undergraduate and graduate mathematics curricula provide students with  analytical, computational, and statistical tools, these curricula generally do not help students \emph{mature} to the point that they can creatively integrate these various  tools to solve complex problems in technology, environment, finance, and biomedical science. This RTG will establish a reproducible and sustainable process for developing this needed maturity in mathematics graduate and undergraduate students and postdoctoral fellows.{\color{magenta}currently we do not substantiate these claims. return to this later.} We will accomplish this by developing new cross-disciplinary courses, updating existing courses, and integrating research experiences that cross disciplinary and institutional boundaries, and providing co-curricular activities that develop essential soft skills.  \FredNote{We need to hint what will be subtracted.  We cannot just add more.}We will recruit female and underrepresented minority students into our RTG through personal connections {\color{red}!!!} and our partner institutions.
@@ -307,31 +307,33 @@ Thrust 1, \emph{Variational Analysis and Inference of High Dimensional Complex D
 Thrust 2, \emph{Sampling combinatorial structures}, couples inference and sampling. 
 Thrust 3, \emph{Dynamics under uncertainty}, couples sampling and dynamics. 
 %All 3 s incorporate two of the main trusts of this RTG: namely, thrust 1 couples inference and dynamics, thrust 2 inference and sampling, and thrust 3 sampling and dynamics. 
-Joint applications in data science provide an additional common thread.  %to the proposal. 
+Joint \FredNote{with what? across themes? or thrusts?}applications in data science provide an additional common thread.  %to the proposal. 
 %under the umbrella of complex dynamical systems {\color{magenta}EDIT ME} NEW: thrust 1 = inference and dynamics; thrust 2 = sampling and inference; thrust 3 = sampling and dynamics. All 3 thrusts have interactions and data science connection. {\color{cyan}←\leftarrow This is the new THREAD of our proposal. } 1.\ Dynamics Under Uncertainty; 2.\  Energetic Variational Approaches for Complex Dynamics; and 3.\ Mathematical Tools for Open Quantum Systems. thrust 1 connects with Theme 2 via minimizing action functionals. In Thrust 3, we examine the interplay of quantum uncertainty and environmental fluctuations, and further consider a Bohmian trajectory formulation of quantum dynamics, thus linking with Thrust 1. 
 
 
 
-Students and postdocs trained under the proposed project will master theoretical and computational concepts that are the foundation of the three research thrusts. Through research seminars, projects, co-curricular training activities, and partnerships described in this proposal, they will get exposure to a broad spectrum of application  areas including  those fundamental to current scientific and technological progress: geophysical and climate systems, liquid crystals, multi-phase flows, ionic fluids,  transportation systems, sensor networks, financial market risk, social networks, socially responsible economic and infrastructure modeling, and biochemical reaction systems.
+Students and postdocs trained under this RTG will master theoretical and computational concepts that are the foundation of the three research thrusts. Through research seminars, projects, co-curricular training activities, and partnerships described in this proposal, they will be exposed to a broad spectrum of applications including  those fundamental to current scientific and technological progress: geophysical and climate systems, liquid crystals, multi-phase flows, ionic fluids,  transportation systems, sensor networks, financial market risk, social networks, socially responsible economic and infrastructure modeling, and biochemical reaction systems.
 
 \subsection*{Academic Environment} The PIs are five Illinois Tech Applied Mathematics faculty:  %Jinqiao Duan\marginpar{remove Duan from the proposal start-finish; read through.}, 
 Fred Hickernell, Xiaofan Li, Chun Liu, Sonja Petrovi\'c, and Ming Zhong. This RTG builds on the PIs' research expertise and our Illinois Tech applied mathematics curriculum.   The research portfolio of our department covers a broad range of applied mathematics and statistics, and includes topics germane to this RTG, including dynamical systems, stochastic dynamical systems, multiscale and variational methods,  Monte Carlo methods, foundations of computational mathematics, discrete mathematics, computational algebra, and data-driven predictive modeling and simulation. Our work has applications in the physical, chemical, geophysical, biophysical, and materials sciences, finance, and social sciences. 
 % The PIs include present and past departmental, college, and university leadership.   Thus, we expect to persuade the bulk of our department to participate in this RTG in some capacity, whether as part of the research groups or implementing our curricular and co-curricular innovations.{\color{magenta}umm, this is actually *unethical*. Instead, we will *involve* a large portion of our colleagues as senior personnel and give them meaningful roles in this RTG, thereby contributing to its success and with a long-term training vision.}
-The PIs and Senior Personnel (SPs) encompass every department group: senior and junior TT faculty and NTT teaching faculty. The involvement of a large portion of the department embeds this RTG into our daily activities in a way that contributes to both short-term success of the proposed program and a long-term transformative training vision. 
+The PIs and Senior Personnel (SPs) encompass every department group: senior and junior tenured and tenure track (TT) faculty and non-tenured/tenure track (NTT) teaching faculty. The involvement of a large portion of the department embeds this RTG into our daily activities in a way that contributes to both short-term success of the proposed program and a long-term transformative training vision. 
 
-\marginpar{\color{cyan}TAG: Chun, can someone double-check these numbers? {\color{red}Yes, Chun will do }\color{cyan} remove CS students?? add DOMESTIC math students?}{\color{blue} we double checked the numbers} We currently have \numUG BS applied mathematics and statistics majors, \numGrad graduate students including \numMS master students and \numPHD doctoral students, \numjoint graduate students with the Department of Computer Science and \numPostDoc postdoctoral fellows or visiting assistant professors. Our graduates build their careers in  industry  and academia. Many of our undergraduates pursue PhDs at other top universities, including Cornell, NYU, UCLA and UIUC. Most of our postdoctoral researchers land tenure-track positions after leaving Illinois Tech.
+\marginpar{\color{cyan}TAG: Chun, can someone double-check these numbers? {\color{red}Yes, Chun will do }\color{cyan} remove CS students?? add DOMESTIC math students?}{\color{blue} we double checked the numbers} We currently have \numUG BS applied mathematics and statistics majors, \numGrad graduate students including \numMS master students and \numPHD doctoral students, \numjoint graduate students in programs offered jointly with the Department of Computer Science and \numPostDoc postdoctoral fellows or visiting assistant professors. Our graduates build their careers in  industry  and academia. Many of our undergraduates pursue PhDs at other top universities, including Cornell, NYU, UCLA and UIUC. Most of our postdoctoral researchers land in tenure-track positions after leaving Illinois Tech.
 
 \subsection*{Partnership with  national labs and local institutes} 
 %...{Argonne, IMSI, C2ST, and Oak Ridge}
 This RTG will benefit from our ongoing collaboration with Argonne National Laboratory (18 miles west of our campus).  Argonne offers a variety of internship opportunities for undergraduate and graduate students, as well as faculty-student teams. Summer internships, supervised by Argonne staff, are typically 10-14 weeks long and involve training in computational mathematics tools and techniques. %Students work on current Argonne projects, supervised by Argonne staff. % The technical part of the internship is complemented by additional training opportunities.
 
-For more than a decade, the Chicago Council on Science and Technology (C2ST) has enhanced the public’s understanding and appreciation of science and technology and their impact on society. C2ST will co-sponsor outreach programs with our RTG and will train our students in communicating their scientific ideas to a broader audience. Letters of collaboration from these partners are included as supplementary documents.  
+Since 2007 the Chicago Council on Science and Technology (C2ST) has enhanced the public’s understanding and appreciation of science and technology and their impact on society. C2ST will co-sponsor outreach programs with our RTG and will train our students in communicating their scientific ideas to a broader audience.   
 
-A recent joint research group was formed with peoples from various departments (ECE, CS and Aerospace) in Illinois Tech and the Data Analysis and Machine Learning Group within the Computer Science and Mathematics Division at the Oak Ridge National lab. 
+A recent joint research group was formed with peoples from various departments (ECE, CS and Aerospace) in Illinois Tech and the Data Analysis and Machine Learning Group within the Computer Science and Mathematics Division at the Oak Ridge National lab. \FredNote{What is the status of this group?}
 
 Finally, we will grow our ongoing collaboration with the NSF Institute for Mathematical and Statistical Innovation (IMSI) %, hosted at University of Chicago 
 (5 miles south of our campus). %\marginpar{\color{red}wait, we don't have a letter from IMSI. but it's different we are just gonna propose events there, right?} 
-Our RTG trainees will participate in IMSI programs, and we will co-sponsor programs of mutual interest with IMSI. 
+Our RTG trainees will participate in IMSI programs, and we will continue to co-sponsor programs of mutual interest with IMSI. 
+
+Letters of collaboration from these partners are included as supplementary documents.
 
 
 
@@ -350,8 +352,8 @@ Our RTG trainees will participate in IMSI programs, and we will co-sponsor progr
 
 The key faculty and scientists for each thrust are listed below. 
 % this discussion edited to better reflect the proposal/personnel structure 
-The structure of our department is similar to the way the research thrusts interact, tied together by fundamental mathematical constructs rather than broad research areas. As such, there is a natural team structure for each thrust:  at least one of the PIs,  additional researchers from the department, additional researchers either from Argonne or a department outside applied mathematics, % The team for each Thrust will consist of one or more PIs, researchers with at least one Argonne scientist or faculty member from a department outside applied mathematics, {\color{magenta}this is NOT yet true for sonja's Thrust. %Argonne can collab only if application of sampling to optimization!}  
-together with applied mathematics undergraduate and graduate students and postdoctoral fellows.
+The structure of our department is similar to the way the research thrusts interact, tied together by fundamental mathematical constructs rather than broad research areas. \FredNote{I do not understand this previous sentence.} As such, there is a natural team structure for each thrust:  at least one of the PIs,  additional researchers from the department, additional researchers either from a partner outside our department, % The team for each Thrust will consist of one or more PIs, researchers with at least one Argonne scientist or faculty member from a department outside applied mathematics, {\color{magenta}this is NOT yet true for sonja's Thrust. %Argonne can collab only if application of sampling to optimization!}  
+plus applied mathematics undergraduate and graduate students and postdoctoral fellows.
 %{\color{cyan}New strength:}
 The core of our team for the proposed project includes NTT and TT faculty across all levels in our department. The planned activities synergize across undergraduate, graduate, and postdoctoral training and collaboration and research. They are planned so as to include, invite, and impact all students, postdocs, and faculty in the department, in addition to RTG trainees.
 %directly supported by this RTG. 
@@ -365,7 +367,7 @@ The core of our team for the proposed project includes NTT and TT faculty across
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Chun Liu (lead), Trevor Leslie (Illinois Tech, Applied Math), Xiaofan Li (Illinois Tech, Applied Math), Yubin Lu (Illinois Tech, Applied Math), Georgia Papavasiliou (Illinois Tech, Biomedical Engineering), and Ming Zhong (Illinois Tech, Applied Math)
 
-\subsubsection*{Background} One of the most crucial tasks in data science is the capability of dealing with high-dimensional data efficiently and effectively, such as high-resolution image generation, large language models for natural language processing, text/image/voice mixed data analysis, medical image/data processing, etc.  Many of high dimensional data sets which we are interested in obey some form of physical/biological/chemical laws governed by systems of ODE/PDE, which makes the analysis and inference extremely difficult.  We propose several energetic variational approach based data-driven methods to infer the governing equations from observation data for analysis, prediction, and control.  The framework of energetic variational approach, originated from seminal works of Raleigh \cite{strutt1871some} and Onsager \cite{onsager1931reciprocal,onsager1931reciprocal2}, provides a paradigm to determine the dynamics of a non-equilibrium system from prescribed energy-dissipation laws.  Such paradigm offers a unique pathway into the accurate scientific discovery of models from high-dimensional dynamical data. 
+\subsubsection*{Background} One of the most crucial tasks in data science is the capability of dealing with high-dimensional data efficiently and effectively, such as high-resolution image generation, large language models for natural language processing \FredNote{You are talking about large language models but who has expertise?  No CS people here.}, text/image/voice mixed data analysis, medical image/data processing, etc.  Many of high dimensional data sets which we are interested in obey some form of physical/biological/chemical laws governed by systems of ODE/PDE, which makes the analysis and inference extremely difficult.  We propose several energetic variational approach based data-driven methods to infer the governing equations from observation data for analysis, prediction, and control.  The framework of energetic variational approach, originated from seminal works of Raleigh \cite{strutt1871some} and Onsager \cite{onsager1931reciprocal,onsager1931reciprocal2}, provides a paradigm to determine the dynamics of a non-equilibrium system from prescribed energy-dissipation laws.  Such paradigm offers a unique pathway into the accurate scientific discovery of models from high-dimensional dynamical data. 
 
 \subsubsection*{Analyzing Complex Behaviors from High dimensional Data}
 Complex systems of interacting agents (i.e., particles, cells, bacteria, animals, human beings, robots, planets, etc.) %\footnote{Agents here can be referred to as particles, cells, bacteria, animals, human beings, robots, planets, etc.} FOOTNOTE TAKES TOO MANY LINES OF SPACE FOR NO GOOD REASON.
